fix spacing and font

--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -4,4 +4,6 @@ div {
     background-color: red;
     color: white;
     font-size: 32px;
+    text-align: center;
+    font-weight: bold;
 }
